# codex-nav-mcp-server

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/code-nav/: Cargo.toml
src/: lib.rs  main.rs  prompt.md  server.rs
