[package]
name = "codex-nav-mcp-server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "codex-nav-mcp-server"
path = "src/main.rs"

[dependencies]
codex-code-nav = { path = "../nidex/codex-rs/code-nav" }
rmcp = { version = "0.12", default-features = false, features = ["base64", "macros", "server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

