[package]
name = "codex-code-nav"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "codex_code_nav"
path = "src/lib.rs"

[[bin]]
name = "codex-code-nav-bin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ignore = "0.4.23"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "json", "macros", "migrate", "runtime-tokio-rustls", "sqlite", "time", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-swift = "0.7.2"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
